WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254603
REGRESSION (
259663@main
): lowes.com: Product image is blank
https://bugs.webkit.org/show_bug.cgi?id=254603
Summary
REGRESSION (259663@main): lowes.com: Product image is blank
Sammy Gill
Reported
2023-03-28 11:56:23 PDT
Product image is showing up as blank:
https://www.lowes.com/pd/allen-roth-4-in-x-14-in-Decorative-Floor-Register-Light-Oak/5001989589
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2023-03-28 11:56:44 PDT
rdar://106926883
Sammy Gill
Comment 2
2023-03-28 15:37:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12080
EWS
Comment 3
2023-03-30 10:55:48 PDT
Committed
262342@main
(d4ec309d5e67): <
https://commits.webkit.org/262342@main
> Reviewed commits have been landed. Closing PR #12080 and removing active labels.
Sammy Gill
Comment 4
2023-03-30 10:57:54 PDT
***
Bug 254641
has been marked as a duplicate of this bug. ***
alan
Comment 5
2023-04-15 07:12:23 PDT
***
Bug 255477
has been marked as a duplicate of this bug. ***
Alex G
Comment 6
2023-04-15 07:30:13 PDT
@Zalan thanks for the update. How can I test the fix? Does the technology preview of safari have the fix yet? Or is there a different build of Safari I can download? When will the next version of Safari with this fix be out to consumers? Its a big regression for us and the images are not laid out correctly. I am trying to figure out if we need to implement a work around or the update will be out soon?
alan
Comment 7
2023-04-15 07:54:58 PDT
(In reply to Alex G from
comment #6
)
> @Zalan thanks for the update. How can I test the fix? Does the technology > preview of safari have the fix yet? Or is there a different build of Safari > I can download? > When will the next version of Safari with this fix be out to consumers? Its > a big regression for us and the images are not laid out correctly. I am > trying to figure out if we need to implement a work around or the update > will be out soon?
This is quite a recent change, I don't think the most recent STP has it yet. Let me check.
alan
Comment 8
2023-04-15 07:58:40 PDT
(In reply to zalan from
comment #7
)
> (In reply to Alex G from
comment #6
) > > @Zalan thanks for the update. How can I test the fix? Does the technology > > preview of safari have the fix yet? Or is there a different build of Safari > > I can download? > > When will the next version of Safari with this fix be out to consumers? Its > > a big regression for us and the images are not laid out correctly. I am > > trying to figure out if we need to implement a work around or the update > > will be out soon? > This is quite a recent change, I don't think the most recent STP has it yet. > Let me check.
https://developer.apple.com/documentation/safari-technology-preview-release-notes/stp-release-167#Overview
says it's not in there yet. :|
alan
Comment 9
2023-04-19 14:33:05 PDT
(In reply to zalan from
comment #8
)
> (In reply to zalan from
comment #7
) > > (In reply to Alex G from
comment #6
) > > > @Zalan thanks for the update. How can I test the fix? Does the technology > > > preview of safari have the fix yet? Or is there a different build of Safari > > > I can download? > > > When will the next version of Safari with this fix be out to consumers? Its > > > a big regression for us and the images are not laid out correctly. I am > > > trying to figure out if we need to implement a work around or the update > > > will be out soon? > > This is quite a recent change, I don't think the most recent STP has it yet. > > Let me check. > >
https://developer.apple.com/documentation/safari-technology-preview-release
- > notes/stp-release-167#Overview says it's not in there yet. :|
This has shipped in STP 168.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug